--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
                             <li><a href="javascript:void(0)">Newsletter</a></li>
                             <li><a href="javascript:void(0)">My Account</a></li>
                             <li><a href="javascript:void(0)">Change Password</a></li>
-                            <li class="last"><a href="javascript:void(0)">Log Out</a></li>
+                            <li class="last"><a href="javascript:void(0)" (click)="Logout()">Log Out</a></li>
                         </ul>
                     </div>
                 </div>
