--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -19,19 +19,24 @@
                         <li class="mobile-wishlist">
                             <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
                         </li>
-                        <li class="mobile-wishlist">
+                        <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <a [routerLink]="['/pages/login']"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
                         </li>
-                        <li class="onhover-dropdown mobile-account">
+                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> My Account
                             <ul class="onhover-show-div">
                                 <li>
-                                    <a data-lng="en">
-                    Login
+                                    <a data-lng="en" [routerLink]="['/pages/profile']">
+                    Profile
                   </a>
                                 </li>
                                 <li>
-                                    <a data-lng="es">
+                                    <a data-lng="en" [routerLink]="['/pages/dashboard']">
+                    Dashboard
+                  </a>
+                                </li>
+                                <li>
+                                    <a data-lng="es" (click)="Logout()">
                     Logout
                   </a>
                                 </li>
