--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-7">
                     <div class="header-contact">
                         <ul>
-                            <li>Welcome to VIKRAM CREATIONS PRIVATE LIMITED</li>
+                            <li>VIKRAM CREATIONS PRIVATE LIMITED</li>
                             <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
                         </ul>
                     </div>
