--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -13,44 +13,44 @@
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">First Name</div>
                                     <input type="text" name="firstname" [formControl]="checkoutForm.controls['firstname']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.firstname.touched && checkoutForm.controls.firstname.errors?.required" class="text text-danger">
-                                    First Name is required.
+                                    <div *ngIf="(checkoutForm.controls.firstname.touched || Submitted) && checkoutForm.controls.firstname.errors?.required" class="text text-danger">
+                                        First Name is required.
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.firstname.touched && checkoutForm.controls.firstname.errors?.pattern" class="text text-danger">
-                                    First Name must be an alphabates.
+                                    <div *ngIf="(checkoutForm.controls.firstname.touched || Submitted) && checkoutForm.controls.firstname.errors?.pattern" class="text text-danger">
+                                        First Name must be an alphabates.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Last Name </div>
                                     <input type="text" name="lastname" [formControl]="checkoutForm.controls['lastname']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.lastname.touched && checkoutForm.controls.lastname.errors?.required" class="text text-danger">
-                                    Last Name is required.
+                                    <div *ngIf="(checkoutForm.controls.lastname.touched || Submitted) && checkoutForm.controls.lastname.errors?.required" class="text text-danger">
+                                        Last Name is required.
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.lastname.touched && checkoutForm.controls.lastname.errors?.pattern" class="text text-danger">
-                                    Last Name must be an alphabates.
+                                    <div *ngIf="(checkoutForm.controls.lastname.touched || Submitted) && checkoutForm.controls.lastname.errors?.pattern" class="text text-danger">
+                                        Last Name must be an alphabates.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Phone</div>
                                     <input type="text" name="phone" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.phone.touched && checkoutForm.controls.phone.errors?.required" class="text text-danger">
-                                     Phone No is required.
+                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required" class="text text-danger">
+                                        Phone No is required.
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.phone.touched && checkoutForm.controls.phone.errors?.pattern" class="text text-danger">
-                                      Phone No is must be number.
+                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.pattern" class="text text-danger">
+                                        Phone No is must be number.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Email Address</div>
                                     <input type="text" name="email" [formControl]="checkoutForm.controls['email']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.email.touched && checkoutForm.controls.email.errors?.required" class="text text-danger">
-                                     Email is required
+                                    <div *ngIf="(checkoutForm.controls.email.touched || Submitted) && checkoutForm.controls.email.errors?.required" class="text text-danger">
+                                        Email is required
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.email.touched && checkoutForm.controls.email.errors?.email" class="text text-danger">
-                                     Invalid Email
+                                    <div *ngIf="(checkoutForm.controls.email.touched || Submitted) && checkoutForm.controls.email.errors?.email" class="text text-danger">
+                                        Invalid Email
                                     </div>
                                 </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">Country</div>
                                     <select name="country" [formControl]="checkoutForm.controls['country']">
                                         <option value="" selected>Select Country</option>
@@ -58,43 +58,44 @@
                                         <option value="USA">USA</option>
                                         <option value="Australia">Australia</option>
                                     </select>
-                                    <div *ngIf="checkoutForm.controls.country.touched && checkoutForm.controls.country.errors?.required" class="text text-danger">
-                                     Country is required
+                                    <div *ngIf="(checkoutForm.controls.country.touched || Submitted) && checkoutForm.controls.country.errors?.required" class="text text-danger">
+                                        Country is required
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                                    <div class="field-label">State</div>
+                                    <input type="text" name="state" [formControl]="checkoutForm.controls['state']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.state.touched || Submitted) && checkoutForm.controls.state.errors?.required" class="text text-danger">
+                                        State is required
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Address</div>
-                                    <input type="text" name="address" [formControl]="checkoutForm.controls['address']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.address.touched && checkoutForm.controls.address.errors?.required" class="text text-danger">
-                                     Address is required
+                                    <textarea name="address" [formControl]="checkoutForm.controls['address']" style="height: 121px;" value="" placeholder="" autocomplete="off"></textarea>
+                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required" class="text text-danger">
+                                        Address is required
                                     </div>
-                                    <div *ngIf="checkoutForm.controls.address.touched && checkoutForm.controls.address.errors?.maxlength" class="text text-danger">
-                                      Maximum 50 character
+                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.maxlength" class="text text-danger">
+                                        Maximum 50 character
                                     </div>
                                 </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">Town/City</div>
                                     <input type="text" name="town" [formControl]="checkoutForm.controls['town']" value="" placeholder="" autocomplete="off">
-                                     <div *ngIf="checkoutForm.controls.town.touched && checkoutForm.controls.town.errors?.required" class="text text-danger">
-                                     City is required
+                                    <div *ngIf="(checkoutForm.controls.town.touched || Submitted) && checkoutForm.controls.town.errors?.required" class="text text-danger">
+                                        City is required
                                     </div>
                                 </div>
-                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
-                                    <div class="field-label">State</div>
-                                    <input type="text" name="state" [formControl]="checkoutForm.controls['state']" value="" placeholder="" autocomplete="off">
-                                     <div *ngIf="checkoutForm.controls.state.touched && checkoutForm.controls.state.errors?.required" class="text text-danger">
-                                     State is required
-                                    </div>
-                                </div>
-                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
+
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">Postal Code</div>
                                     <input type="text" name="postalcode" [formControl]="checkoutForm.controls['postalcode']" value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="checkoutForm.controls.postalcode.touched && checkoutForm.controls.postalcode.errors?.required" class="text text-danger">
-                                     Postalcode is required
+                                    <div *ngIf="(checkoutForm.controls.postalcode.touched || Submitted) && checkoutForm.controls.postalcode.errors?.required" class="text text-danger">
+                                        Postalcode is required
                                     </div>
                                 </div>
                             </div>
-                          <div class="row ">
+                            <!-- <div class="row ">
                             <div class="col-12">
                               <div class="stripe-section">
                                 <h5>stripe js</h5>
@@ -141,7 +142,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                         </div>
 
                         <div class="col-lg-6 col-sm-12 col-xs-12">
@@ -152,8 +153,8 @@
                                     </div>
                                     <ul class="qty" *ngIf='products.length'>
                                         <li *ngFor="let product of products">
-                                        	 {{ product.title }} × {{ product.quantity }}
-                                        	<span>
+                                            {{ product.title }} × {{ product.quantity }}
+                                            <span>
                                                 {{ (product.price | discount:product) * productService?.Currency.price | currency:productService?.Currency.currency:'symbol' }}
                                             </span>
                                         </li>
@@ -163,20 +164,21 @@
                                     </ul>
                                     <ul class="sub-total">
                                         <li>
-                                        	Subtotal <span class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span>
+                                            Subtotal <span class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
                                         <li *ngIf='products.length'>
-                                        	Shipping
-                                         <div class="shipping">
-                                            <div class="shopping-option">
-                                                <input type="radio" name="shipping" checked="checked" id="free-shipping">
-                                                <label for="free-shipping">Shipping</label>
+                                            Shipping
+                                            <div class="shipping">
+                                                Free Shipping
+                                                <!-- <div class="shopping-option">
+                                                    <input type="radio" name="shipping" checked="checked" id="free-shipping">
+                                                    <label for="free-shipping">Shipping</label>
+                                                </div>
+                                                <div class="shopping-option">
+                                                    <input type="radio" name="shipping" id="local-pickup">
+                                                    <label for="local-pickup">Local Pickup</label>
+                                                </div> -->
                                             </div>
-                                            <div class="shopping-option">
-                                                <input type="radio"  name="shipping" id="local-pickup">
-                                                <label for="local-pickup">Local Pickup</label>
-                                            </div>
-                                         </div>
                                         </li>
                                     </ul>
                                     <ul class="total">
@@ -190,25 +192,39 @@
                                             <ul>
                                                 <li>
                                                     <div class="radio-option">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'Stripe'"  name="payment-group" id="payment-2">
-                                                        <label for="payment-2">Stripe
+                                                        <input type="radio" [(ngModel)]="payment" [value]="'COD'" name="payment-group" id="payment-1">
+                                                        <label for="payment-1">Cash on Delivery (COD)
+                                                            </label>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="radio-option">
+                                                        <input type="radio" [(ngModel)]="payment" [value]="'OnlinePayment'" name="payment-group" id="payment-2">
+                                                        <label for="payment-2">Online Payment
+                                                            </label>
+                                                    </div>
+                                                </li>
+                                                <!-- <li>
+                                                    <div class="radio-option">
+                                                        <input type="radio" [(ngModel)]="payment" [value]="'Stripe'" name="payment-group" id="payment-3">
+                                                        <label for="payment-3">Stripe
                                                             <span class="small-text">Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</span></label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-option paypal">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'Paypal'" name="payment-group" id="payment-3">
-                                                        <label for="payment-3">PayPal<span class="image"><img src="assets/images/paypal.png" alt="" /></span></label>
+                                                        <input type="radio" [(ngModel)]="payment" [value]="'Paypal'" name="payment-group" id="payment-4">
+                                                        <label for="payment-4">PayPal<span class="image"><img src="assets/images/paypal.png" alt="" /></span></label>
                                                     </div>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="text-right">
-                                        <button type="submit" class="btn-solid btn" [disabled]="!checkoutForm.valid" (click)="stripeCheckout()" *ngIf="payment == 'Stripe'">
+                                        <button type="submit" class="btn-solid btn" (click)="ProcessCheckOut()">
                                            Place Order
                                         </button>
-                                        <ngx-paypal [config]="payPalConfig" *ngIf="payment == 'Paypal'"></ngx-paypal>
+                                        <!-- <ngx-paypal [config]="payPalConfig" *ngIf="payment == 'Paypal'"></ngx-paypal> -->
                                     </div>
                                 </div>
                             </div>
