--- a/src/app/shared/components/categories/categories.component.html
+++ b/src/app/shared/components/categories/categories.component.html
@@ -4,10 +4,17 @@
     <div class="collection-collapse-block-content">
         <div class="collection-brand-filter">
             <ul class="category-list">
-                <li *ngFor="let category of filterbyCategory">
+                <!-- <li *ngFor="let category of filterbyCategory">
                     <a [routerLink]="['/shop/collection/left/sidebar']"
                        [queryParams]="{ category: category}">
                         {{ category }}
+                    </a>
+                </li> -->
+
+                <li *ngFor="let subcategory of lstsubCategory">
+                    <a [routerLink]="['/shop/collection/left/sidebar']"
+                        [queryParams]="{ category: subcategory.subCatCode}">
+                        {{subcategory.name}}
                     </a>
                 </li>
             </ul>
