--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -2,7 +2,11 @@
 
 <!-- Home slider start-->
 <section class="p-0">
-  <app-slider [sliders]="sliders" [textClass]="'text-center'" [category]="'fashion'" [buttonText]="'shop now'">
+  <app-slider 
+    [sliders]="sliders" 
+    [textClass]="'text-center'"
+    [category]="'fashion'"
+    [buttonText]="'shop now'"> 
   </app-slider>
 </section>
 <!-- Home slider End -->
@@ -39,7 +43,7 @@
     <div class="col-lg-6 offset-lg-3">
       <div class="product-para">
         <p class="text-center">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry,
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry, 
           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
         </p>
       </div>
@@ -54,7 +58,10 @@
           <ng-container *ngFor="let product of products | slice:0:16">
             <ng-template carouselSlide>
               <div class="product-box">
-                <app-product-box-one [product]="product" [currency]="productService?.Currency" [thumbnail]="true"
+                <app-product-box-one 
+                  [product]="product" 
+                  [currency]="productService?.Currency"
+                  [thumbnail]="true"
                   [cartModal]="true">
                 </app-product-box-one>
               </div>
@@ -102,7 +109,10 @@
               <div class="no-slider row">
                 <ng-container *ngFor="let product of getCollectionProducts(collection) | slice:0:8">
                   <div class="product-box">
-                    <app-product-box-one [product]="product" [currency]="productService?.Currency" [thumbnail]="true"
+                    <app-product-box-one 
+                      [product]="product" 
+                      [currency]="productService?.Currency"
+                      [thumbnail]="true"
                       [cartModal]="true">
                     </app-product-box-one>
                   </div>
@@ -172,3 +182,4 @@
 
 <app-newsletter></app-newsletter>
 <app-footer-one></app-footer-one>
+
