--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -6,24 +6,24 @@
         <i class="ti-search"></i>
       </div>
     </li>
-    <li class="onhover-div mobile-setting">
-      <div><img src="assets/images/icon/setting.png" class="img-fluid" alt="settong">
-        <i class="ti-settings"></i></div>
-      <div class="show-div setting">
-        <h6>language</h6>
-        <ul>
-          <li *ngFor="let language of languages">
-            <a href="javascript:void(0)" (click)="changeLanguage(language.code)">{{ language.name }}</a>
-          </li>
-        </ul>
-        <h6>currency</h6>
-        <ul class="list-inline">
-          <li *ngFor="let currency of currencies">
-            <a href="javascript:void(0)" (click)="changeCurrency(currency)">{{ currency.name }}</a>
-          </li>
-        </ul>
-      </div>
-    </li>
+        <!-- <li class="onhover-div mobile-setting">
+            <div><img src="assets/images/icon/setting.png" class="img-fluid" alt="settong">
+                <i class="ti-settings"></i></div>
+            <div class="show-div setting">
+                <h6>language</h6>
+                <ul>
+                    <li *ngFor="let language of languages">
+                        <a href="javascript:void(0)" (click)="changeLanguage(language.code)">{{ language.name }}</a>
+                    </li>
+                </ul>
+                <h6>currency</h6>
+                <ul class="list-inline">
+                    <li *ngFor="let currency of currencies">
+                        <a href="javascript:void(0)" (click)="changeCurrency(currency)">{{ currency.name }}</a>
+                    </li>
+                </ul>
+            </div>
+        </li> -->
     <li class="onhover-div mobile-cart">
       <div>
         <a [routerLink]="['/shop/cart']">
@@ -31,24 +31,28 @@
           <i class="ti-shopping-cart"></i>
         </a>
       </div>
-      <span class="cart_qty_cls">{{ products.length }}</span>
-      <ul class="show-div shopping-cart" *ngIf='!products.length'>
+      <span class="cart_qty_cls">{{ productSizeColor.length }}</span>
+      <ul class="show-div shopping-cart" *ngIf='!productSizeColor.length'>
         <h5>Your cart is currently empty.</h5>
       </ul>
-      <ul class="show-div shopping-cart" *ngIf='products.length'>
-        <li *ngFor="let product of products">
+      <ul class="show-div shopping-cart">
+        <li *ngFor="let product of productSizeColor">
           <div class="media">
-            <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-              <img class="mr-3" [src]="product?.images[0].src" [alt]="product?.images[0].alt">
+            <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
+            <a>
+              <img class="mr-3"
+                [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]">
+              <!-- [alt]="product?.images[0].alt" -->
             </a>
             <div class="media-body">
-              <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                <h4>{{ product?.title }}</h4>
+              <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
+              <a>
+                <h4>{{ product?.productname }}</h4>
               </a>
               <h4>
                 <span>
-                  {{ product?.quantity }} x 
-                  {{ product?.price * productService?.Currency.price | discount:product | currency:productService?.Currency.currency:'symbol' }}
+                  {{ product?.quantity }} x
+                  {{ product?.salePrice  | currency:productService?.Currency.currency:'symbol' }}
                 </span>
               </h4>
             </div>
@@ -59,13 +63,14 @@
         </li>
         <li>
           <div class="total">
-            <h5>subtotal : <span>{{ getTotal | async | currency:productService?.Currency.currency:'symbol' }}</span></h5>
+            <h5>subtotal : <span>{{ getTotal | async | currency:productService?.Currency.currency:'symbol' }}</span>
+            </h5>
           </div>
         </li>
         <li>
           <div class="buttons">
             <a [routerLink]="['/shop/cart']" class="view-cart">view cart</a>
-            <a [routerLink]="['/shop/checkout']" class="checkout">checkout</a>
+                        <a class="checkout" (click)="ProceedToCheckout()">checkout</a>
           </div>
         </li>
       </ul>
