--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Phone</div>
-                                    <input type="text" name="phone" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
+                                    <input type="text" name="phone" maxlength="10" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
                                     <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required" class="text text-danger">
                                         Phone No is required.
                                     </div>
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Address</div>
-                                    <textarea name="address" [formControl]="checkoutForm.controls['address']" style="height: 121px;" value="" placeholder="" autocomplete="off"></textarea>
+                                    <textarea name="address" [formControl]="checkoutForm.controls['address']" style="height: 65px;" value="" placeholder="" autocomplete="off"></textarea>
                                     <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required" class="text text-danger">
                                         Address is required
                                     </div>
@@ -151,22 +151,23 @@
                                     <div class="title-box">
                                         <div>Product <span> Total</span></div>
                                     </div>
-                                    <ul class="qty" *ngIf='products.length'>
-                                        <li *ngFor="let product of products">
-                                            {{ product.title }} × {{ product.quantity }}
+                                    <ul class="qty" *ngIf='productSizeColor.length'>
+                                        <li *ngFor="let product of productSizeColor">
+                                            {{ product?.productname }} × {{ product?.quantity }}
                                             <span>
-                                                {{ (product.price | discount:product) * productService?.Currency.price | currency:productService?.Currency.currency:'symbol' }}
+                                                {{ product.salePrice  | currency:productService?.Currency.currency:'symbol' }}
                                             </span>
                                         </li>
                                     </ul>
-                                    <ul class="qty" *ngIf='!products.length'>
+                                    <ul class="qty" *ngIf='!productSizeColor.length'>
                                         <li class="empty-checkout"> There are no products in cart </li>
                                     </ul>
                                     <ul class="sub-total">
                                         <li>
-                                            Subtotal <span class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span>
+                                            Subtotal <span
+                                                class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
-                                        <li *ngIf='products.length'>
+                                        <li *ngIf='productSizeColor.length'>
                                             Shipping
                                             <div class="shipping">
                                                 Free Shipping
@@ -182,11 +183,13 @@
                                         </li>
                                     </ul>
                                     <ul class="total">
-                                        <li>Total <span class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span></li>
+                                        <li>Total <span
+                                                class="count">{{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</span>
+                                        </li>
                                     </ul>
                                 </div>
 
-                                <div class="payment-box" *ngIf='products.length'>
+                                <div class="payment-box" *ngIf='productSizeColor.length'>
                                     <div class="upper-box">
                                         <div class="payment-options">
                                             <ul>
@@ -204,25 +207,12 @@
                                                             </label>
                                                     </div>
                                                 </li>
-                                                <!-- <li>
-                                                    <div class="radio-option">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'Stripe'" name="payment-group" id="payment-3">
-                                                        <label for="payment-3">Stripe
-                                                            <span class="small-text">Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</span></label>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="radio-option paypal">
-                                                        <input type="radio" [(ngModel)]="payment" [value]="'Paypal'" name="payment-group" id="payment-4">
-                                                        <label for="payment-4">PayPal<span class="image"><img src="assets/images/paypal.png" alt="" /></span></label>
-                                                    </div>
-                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="text-right">
                                         <button type="submit" class="btn-solid btn" (click)="ProcessCheckOut()">
-                                           Place Order
+                                            Place Order
                                         </button>
                                         <!-- <ngx-paypal [config]="payPalConfig" *ngIf="payment == 'Paypal'"></ngx-paypal> -->
                                     </div>
