--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="product?.title" [breadcrumb]="'Product'"></app-breadcrumb>
+<app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb>
 <!-- section start -->
 <section class="section-b-space">
   <div class="collection-wrapper">
@@ -7,20 +7,20 @@
         <div class="col-sm-3">
           <div class="collection-filter" [class.openFilterbar]="mobileSidebar">
             <div class="collection-filter-block">
-                <div class="collection-mobile-back" (click)="toggleMobileSidebar()">
-                  <span class="filter-back">
-                    <i class="fa fa-angle-left" aria-hidden="true"></i> back
-                  </span>
-                </div>
-                <app-categories></app-categories>
+              <div class="collection-mobile-back" (click)="toggleMobileSidebar()">
+                <span class="filter-back">
+                  <i class="fa fa-angle-left" aria-hidden="true"></i> back
+                </span>
+              </div>
+              <app-categories></app-categories>
             </div>
             <div class="collection-filter-block">
-                <app-services></app-services>
+              <app-services></app-services>
             </div>
-                <app-product-box-vertical-slider 
+            <!-- <app-product-box-vertical-slider 
                   [title]="'New product'" 
                   [type]="product?.type">
-                </app-product-box-vertical-slider>
+                </app-product-box-vertical-slider> -->
           </div>
         </div>
         <div class="col-lg-9 col-sm-12 col-xs-12">
@@ -36,71 +36,72 @@
             </div>
             <div class="row">
               <div class="col-lg-6">
-                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar  class="product-slick">
-                    <ng-container *ngFor="let image of product?.images; index as i">
-                        <ng-template carouselSlide [id]="i">
-                            <div>
-                              <img [defaultImage]="'assets/images/product/placeholder.jpg'" 
-                                   [lazyLoad]="image.src" 
-                                   [alt]="image.alt" class="img-fluid">
-                            </div>
-                        </ng-template>
-                    </ng-container>
+                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
+                  <ng-container
+                    *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                    <ng-template carouselSlide [id]="i">
+                      <div>
+                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                          [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                          [alt]="image.alt" class="img-fluid">
+                      </div>
+                    </ng-template>
+                  </ng-container>
                 </owl-carousel-o>
-                <div class="col-12 p-0" *ngIf="product?.images.length > 1">
-                    <div class="slider-nav">
-                        <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
-                            <ng-container *ngFor="let image of product?.images; index as i">
-                                <ng-template carouselSlide [id]="i">
-                                    <div class="owl-thumb" [class.active]="i == activeSlide">
-                                      <img [defaultImage]="'assets/images/product/placeholder.jpg'" 
-                                           [lazyLoad]="image.src" 
-                                           [alt]="image.alt" class="img-fluid" 
-                                           (click)="owlCar.to(activeSlide = i.toString())">
-                                    </div>
-                                </ng-template>
-                            </ng-container>
-                        </owl-carousel-o>
-                    </div>
+                <div class="col-12 p-0">
+                  <!-- *ngIf="product?.images.length > 1" -->
+                  <div class="slider-nav">
+                    <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
+                      <ng-container
+                        *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                        <ng-template carouselSlide [id]="i">
+                          <div class="owl-thumb" [class.active]="i == activeSlide">
+                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                              [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                              [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide = i.toString())">
+                          </div>
+                        </ng-template>
+                      </ng-container>
+                    </owl-carousel-o>
+                  </div>
                 </div>
               </div>
+
               <div class="col-lg-6 rtl-text">
                 <div class="product-right">
-                  <h2>{{ product?.title }}</h2>
+                  <h2>{{ productkart[0]?.productName }}</h2>
                   <h4>
-                      <del *ngIf="product?.discount">{{ product?.price * productService.Currency?.price | currency: productService.Currency?.currency:'symbol' }}</del>
-                      <span>{{ product?.discount }}% off</span>
+                    <del>{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                    <span>{{ productkart[0]?.discount }}% off</span>
                   </h4>
                   <h3>
-                      {{ (product?.price | discount:product) * productService.Currency?.price | currency: productService.Currency?.currency:'symbol' }}
+                    {{  productkart[0]?.salePrice  | currency: productService.Currency?.currency:'symbol' }}
                   </h3>
-                  <ul class="color-variant" *ngIf="Color(product?.variants).length">
-                    <li [class]="color" [class.active]="activeSlide == i.toString()" 
-                        *ngFor="let color of Color(product?.variants); index as i" 
-                        [ngStyle]="{'background-color': color}"
-                        (click)="owlCar.to(activeSlide = i.toString())">
-                    </li>
+                  <ul class="color-variant">
+                    <li [class]="color" [class.active]="activeSlide == i.toString()"
+                      *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
+                      [ngStyle]="{'background-color': color}" (click)="changecolor(i.toString())"> </li>
                   </ul>
-                  <app-stock-inventory [stock]="product?.stock"></app-stock-inventory>
+                  <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory>
                   <div class="product-description border-product">
-                    <h6 class="product-title size-text" *ngIf="Size(product.variants).length">
-                        select size
-                        <span>
-                          <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size chart</a>
-                        </span>
+                    <h6 class="product-title size-text">
+                      select size
+                      <span>
+                        <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size chart</a>
+                      </span>
                     </h6>
-                    <div class="size-box" *ngIf="Size(product.variants).length">
+                    <div class="size-box">
                       <ul>
-                          <li [class.active]="selectedSize == size" 
-                              *ngFor="let size of Size(product.variants)">
-                              <a href="javascript:void(0)" (click)="selectSize(size)">
-                                {{ size | titlecase }}
-                              </a>
-                          </li>
+                        <li [class.active]="selectedSize == size"
+                          *ngFor="let size of Size(productkart[0]?.productSizeColor)">
+                          <a href="javascript:void(0)" (click)="selectSize(size)">
+                            {{ size | titlecase }}
+                          </a>
+                        </li>
                       </ul>
                     </div>
-                    <h5 class="avalibility" *ngIf="counter <= product.stock"><span>In Stock</span></h5>
-                    <h5 class="avalibility" *ngIf="counter > product.stock"><span>Out of Stock</span></h5>
+                    <h5 class="avalibility" *ngIf="counter <= productkart[0]?.qty"><span>In Stock</span></h5>
+                    <h5 class="avalibility" *ngIf="counter > productkart[0]?.qty"><span>Out of Stock</span></h5>
                     <h6 class="product-title">quantity</h6>
                     <div class="qty-box">
                       <div class="input-group">
@@ -109,7 +110,8 @@
                             <i class="ti-angle-left"></i>
                           </button>
                         </span>
-                        <input type="text" name="quantity" class="form-control input-number" [value]="counter" disabled/>
+                        <input type="text" name="quantity" class="form-control input-number" [value]="counter"
+                          disabled />
                         <span class="input-group-prepend">
                           <button type="button" class="btn quantity-right-plus" data-type="plus" (click)="increment()">
                             <i class="ti-angle-right"></i>
@@ -119,19 +121,22 @@
                     </div>
                   </div>
                   <div class="product-buttons">
-                    <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter > product.stock" (click)="addToCart(product)">add to cart</a>
-                    <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter > product.stock" (click)="buyNow(product)">buy now</a>
+                    <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter >  productkart[0]?.qty"
+                      (click)="addToCart(productkart[0]?.productSizeColor[bigProductImageIndex],productkart[0]?.productName)">add
+                      to cart</a>
+                    <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter >  productkart[0]?.qty"
+                      (click)="buyNow(productkart[0])">buy now</a>
                   </div>
                   <div class="border-product">
                     <h6 class="product-title">product details</h6>
-                    <p>{{ product.description.substring(0, 200)+'...' }}</p>
+                    <p>{{ productkart[0]?.description }}</p>
                   </div>
                   <div class="border-product">
                     <h6 class="product-title">share it</h6>
                     <div class="product-icon">
                       <app-social></app-social>
                       <form class="d-inline-block">
-                        <button class="wishlist-btn" (click)="addToWishlist(product)">
+                        <button class="wishlist-btn" (click)="addToWishlist(productkart[0])">
                           <i class="fa fa-heart"></i>
                           <span class="title-font">Add To WishList</span>
                         </button>
@@ -139,7 +144,7 @@
                     </div>
                   </div>
                   <div class="border-product">
-                    <app-countdown [date]="'Apr 21 2021'"></app-countdown>
+                    <app-countdown [date]="'july 21 2020'"></app-countdown>
                   </div>
                 </div>
               </div>
@@ -149,62 +154,65 @@
             <div class="row">
               <div class="col-sm-12 col-lg-12">
                 <ngb-tabset [type]="'tabs'" class="nav-material">
-                    <ngb-tab>
-                        <ng-template ngbTabTitle>Description</ng-template>
-                        <ng-template ngbTabContent>
-                          <p>{{ product.description }}</p>
-                        </ng-template>
-                    </ngb-tab>
-                    <ngb-tab>
-                        <ng-template ngbTabTitle>Video</ng-template>
-                        <ng-template ngbTabContent>
-                          <div class="mt-3 text-center">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                          </div>
-                        </ng-template>
-                    </ngb-tab>
-                    <ngb-tab>
-                        <ng-template ngbTabTitle>Write Review</ng-template>
-                        <ng-template ngbTabContent>
-                          <form class="theme-form">
-                            <div class="form-row">
-                              <div class="col-md-12 ">
-                                <div class="media">
-                                  <label>Rating</label>
-                                  <div class="media-body ml-3">
-                                    <div class="rating three-star">
-                                      <i class="fa fa-star"></i>
-                                      <i class="fa fa-star"></i>
-                                      <i class="fa fa-star"></i>
-                                      <i class="fa fa-star"></i>
-                                      <i class="fa fa-star"></i>
-                                    </div>
-                                  </div>
+                  <ngb-tab>
+                    <ng-template ngbTabTitle>Description</ng-template>
+                    <ng-template ngbTabContent>
+                      <p>{{productkart[0]?.description }}</p>
+                    </ng-template>
+                  </ngb-tab>
+                  <ngb-tab>
+                    <ng-template ngbTabTitle>Video</ng-template>
+                    <ng-template ngbTabContent>
+                      <div class="mt-3 text-center">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8"
+                          allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      </div>
+                    </ng-template>
+                  </ngb-tab>
+                  <ngb-tab>
+                    <ng-template ngbTabTitle>Write Review</ng-template>
+                    <ng-template ngbTabContent>
+                      <form class="theme-form">
+                        <div class="form-row">
+                          <div class="col-md-12 ">
+                            <div class="media">
+                              <label>Rating</label>
+                              <div class="media-body ml-3">
+                                <div class="rating three-star">
+                                  <i class="fa fa-star"></i>
+                                  <i class="fa fa-star"></i>
+                                  <i class="fa fa-star"></i>
+                                  <i class="fa fa-star"></i>
+                                  <i class="fa fa-star"></i>
                                 </div>
                               </div>
-                              <div class="col-md-6">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter Your name" required>
-                              </div>
-                              <div class="col-md-6">
-                                <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email" placeholder="Email" required>
-                              </div>
-                              <div class="col-md-12">
-                                <label for="review">Review Title</label>
-                                <input type="text" class="form-control" id="review" placeholder="Enter your Review Subjects" required>
-                              </div>
-                              <div class="col-md-12">
-                                <label for="review">Review Title</label>
-                                <textarea class="form-control" placeholder="Wrire Your Testimonial Here" id="exampleFormControlTextarea1" rows="6"></textarea>
-                              </div>
-                              <div class="col-md-12">
-                                <button class="btn btn-solid" type="submit">Submit YOur Review</button>
-                              </div>
                             </div>
-                          </form>
-                        </ng-template>
-                    </ngb-tab>
+                          </div>
+                          <div class="col-md-6">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter Your name" required>
+                          </div>
+                          <div class="col-md-6">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" id="email" placeholder="Email" required>
+                          </div>
+                          <div class="col-md-12">
+                            <label for="review">Review Title</label>
+                            <input type="text" class="form-control" id="review" placeholder="Enter your Review Subjects"
+                              required>
+                          </div>
+                          <div class="col-md-12">
+                            <label for="review">Review Title</label>
+                            <textarea class="form-control" placeholder="Wrire Your Testimonial Here"
+                              id="exampleFormControlTextarea1" rows="6"></textarea>
+                          </div>
+                          <div class="col-md-12">
+                            <button class="btn btn-solid" type="submit">Submit YOur Review</button>
+                          </div>
+                        </div>
+                      </form>
+                    </ng-template>
+                  </ngb-tab>
                 </ngb-tabset>
               </div>
             </div>
@@ -213,7 +221,7 @@
       </div>
     </div>
   </div>
-  <app-related-product [type]="product?.type"></app-related-product>
+  <!-- <app-related-product [type]="product?.type"></app-related-product> -->
 </section>
 <app-size-modal #sizeChart [product]="product"></app-size-modal>
 <!-- Section ends -->
